force-app/main/default/objects/Trazabilidad_de_Pedido__c/Trazabilidad_de_Pedido__c.object-meta.xml
<CustomObject>
    <label>Trazabilidad de Pedido</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Nro de Trazabilidad de Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trazabilidad de Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>