force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CANAL_DE_VENTA__c.field-meta.xml
<CustomField>
    <fullName>CANAL_DE_VENTA__c</fullName>
    <label>Canal de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>