force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CANTIDAD_CANCELADA__c.field-meta.xml
<CustomField>
    <fullName>CANTIDAD_CANCELADA__c</fullName>
    <label>Cantidad Cancelada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>