force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CANTIDAD_ENVIADA__c.field-meta.xml
<CustomField>
    <fullName>CANTIDAD_ENVIADA__c</fullName>
    <label>Cantidad Enviada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>