force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CANTIDAD_FACTURADA__c.field-meta.xml
<CustomField>
    <fullName>CANTIDAD_FACTURADA__c</fullName>
    <label>Cantidad Facturada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>