force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CIUDAD__c.field-meta.xml
<CustomField>
    <fullName>CIUDAD__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>