force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CLASE__c.field-meta.xml
<CustomField>
    <fullName>CLASE__c</fullName>
    <label>Clase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>