force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CLIENTE__c.field-meta.xml
<CustomField>
    <fullName>CLIENTE__c</fullName>
    <label>Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>