force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/Cliente_lookup__c.field-meta.xml
<CustomField>
    <fullName>Cliente_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Cliente</label>
    <referenceTo>Clientes__c</referenceTo>
    <relationshipLabel>Trazabilidad de Pedidos</relationshipLabel>
    <relationshipName>Trazabilidad_de_Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>