force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CODIGO_CLIENTE__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_CLIENTE__c</fullName>
    <label>Código Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>