force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CODIGO_POSTAL__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_POSTAL__c</fullName>
    <label>Código Postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>