force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CODIGO_PRODUCTO__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_PRODUCTO__c</fullName>
    <label>Código Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>