force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CODIGO_SUCURSAL__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_SUCURSAL__c</fullName>
    <label>Código Sucursal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>