force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/CONDICION_DE_PAGO__c.field-meta.xml
<CustomField>
    <fullName>CONDICION_DE_PAGO__c</fullName>
    <label>Condición de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>