force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/DEPOSITO__c.field-meta.xml
<CustomField>
    <fullName>DEPOSITO__c</fullName>
    <label>Depósito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>