force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/DOMICILIO_ENVIO__c.field-meta.xml
<CustomField>
    <fullName>DOMICILIO_ENVIO__c</fullName>
    <label>Domicilio Envío</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>