force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/ESTADO_CABECERA_PEDIDO__c.field-meta.xml
<CustomField>
    <fullName>ESTADO_CABECERA_PEDIDO__c</fullName>
    <label>Estado Cabecera Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>