force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/ESTADO_LINEA__c.field-meta.xml
<CustomField>
    <fullName>ESTADO_LINEA__c</fullName>
    <label>Estado Línea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>