force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/FECHA_LIB_CREDITO__c.field-meta.xml
<CustomField>
    <fullName>FECHA_LIB_CREDITO__c</fullName>
    <label>Fecha Lib Crédito</label>
    <type>Date</type>
</CustomField>