force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/FECHA_PEDIDO__c.field-meta.xml
<CustomField>
    <fullName>FECHA_PEDIDO__c</fullName>
    <label>Fecha Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>