force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/FECHA_PICKING__c.field-meta.xml
<CustomField>
    <fullName>FECHA_PICKING__c</fullName>
    <label>Fecha Picking</label>
    <type>Date</type>
</CustomField>