force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/FECHA_TRANSACCION__c.field-meta.xml
<CustomField>
    <fullName>FECHA_TRANSACCION__c</fullName>
    <label>Fecha Transacción</label>
    <type>Date</type>
</CustomField>