force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/FECHA_VENCIMIENTO_LOTE__c.field-meta.xml
<CustomField>
    <fullName>FECHA_VENCIMIENTO_LOTE__c</fullName>
    <label>Fecha Vencimiento Lote</label>
    <type>Date</type>
</CustomField>