force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/ID_LINEA_DE_ENTREGA__c.field-meta.xml
<CustomField>
    <fullName>ID_LINEA_DE_ENTREGA__c</fullName>
    <label>ID Línea de Entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>