force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/ID_LINEA_PEDIDO__c.field-meta.xml
<CustomField>
    <fullName>ID_LINEA_PEDIDO__c</fullName>
    <label>Id Linea Pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>