force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/ID_LISTA_DE_PRECIOS__c.field-meta.xml
<CustomField>
    <fullName>ID_LISTA_DE_PRECIOS__c</fullName>
    <label>ID Lista de Precios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>