force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/IMPUESTO_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>IMPUESTO_TOTAL__c</fullName>
    <label>Impuesto Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>