force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/LISTA_DE_PRECIOS__c.field-meta.xml
<CustomField>
    <fullName>LISTA_DE_PRECIOS__c</fullName>
    <label>Lista de Precios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>