force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/MONEDA__c.field-meta.xml
<CustomField>
    <fullName>MONEDA__c</fullName>
    <label>Moneda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>