force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/MOTIVO_DEVOLUCION__c.field-meta.xml
<CustomField>
    <fullName>MOTIVO_DEVOLUCION__c</fullName>
    <label>Motivo Devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>