force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_DE_LINEA_ORIGINAL__c.field-meta.xml
<CustomField>
    <fullName>NRO_DE_LINEA_ORIGINAL__c</fullName>
    <label>Nro. de Línea original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>