force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_DE_PEDIDO_DE_MOVIMIENTO__c.field-meta.xml
<CustomField>
    <fullName>NRO_DE_PEDIDO_DE_MOVIMIENTO__c</fullName>
    <label>Nro. de pedido de movimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>