force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_DE_TRANSACCION_ORIGINAL__c.field-meta.xml
<CustomField>
    <fullName>NRO_DE_TRANSACCION_ORIGINAL__c</fullName>
    <label>Nro. de Transacción original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>