force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_ENTREGA__c.field-meta.xml
<CustomField>
    <fullName>NRO_ENTREGA__c</fullName>
    <label>Nro Entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>