force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_PEDIDO_ORACLE__c.field-meta.xml
<CustomField>
    <fullName>NRO_PEDIDO_ORACLE__c</fullName>
    <label>Nro Pedido Oracle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>