force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_REFERENCIA_PEDIDO_EXTERNO__c.field-meta.xml
<CustomField>
    <fullName>NRO_REFERENCIA_PEDIDO_EXTERNO__c</fullName>
    <label>Nro Referencia Pedido externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>