force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/NRO_TRANSACCION__c.field-meta.xml
<CustomField>
    <fullName>NRO_TRANSACCION__c</fullName>
    <externalId>true</externalId>
    <label>Nro Transacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>