force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/ORDEN_DE_COMPRA__c.field-meta.xml
<CustomField>
    <fullName>ORDEN_DE_COMPRA__c</fullName>
    <label>Orden de Compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>