force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/PRECIO_DE_VENTA_UNITARIO__c.field-meta.xml
<CustomField>
    <fullName>PRECIO_DE_VENTA_UNITARIO__c</fullName>
    <label>Precio de Venta Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>