force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/PRECIO_EXTENDIDO__c.field-meta.xml
<CustomField>
    <fullName>PRECIO_EXTENDIDO__c</fullName>
    <label>Precio Extendido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>