force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/PRODUCTO__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTO__c</fullName>
    <label>Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>