force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/PROVINCIA__c.field-meta.xml
<CustomField>
    <fullName>PROVINCIA__c</fullName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>