force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/REFERENCIA_ORIGEN_PEDIDO__c.field-meta.xml
<CustomField>
    <fullName>REFERENCIA_ORIGEN_PEDIDO__c</fullName>
    <label>Referencia Origen Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>