force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/REMITO__c.field-meta.xml
<CustomField>
    <fullName>REMITO__c</fullName>
    <label>Remito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>