force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/REPRESENTANTE_DE_VENTAS__c.field-meta.xml
<CustomField>
    <fullName>REPRESENTANTE_DE_VENTAS__c</fullName>
    <label>Representante de Ventas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>