force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/RETENCION__c.field-meta.xml
<CustomField>
    <fullName>RETENCION__c</fullName>
    <label>RETENCION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>