force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/SUCURSAL_ENVIO__c.field-meta.xml
<CustomField>
    <fullName>SUCURSAL_ENVIO__c</fullName>
    <label>Sucursal Envío</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>