force-app/main/default/objects/Trazabilidad_de_Pedido__c/fields/TIPO_DE_PEDIDO__c.field-meta.xml
<CustomField>
    <fullName>TIPO_DE_PEDIDO__c</fullName>
    <label>Tipo de Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>